src/components/Nav-b/_index.scss
.nav--b {
  display: none;
  float: left;

  @include breakpoint(min, 78.125em) {
    display: inline-block;
  }
}

.nav--b--sub {
  display: none;

  @include breakpoint(min, 78.125em) {
    display: inline-block;
    float: right;
    padding-top: 0.1875em;
  }
}

.nav--b .flyout,   /* Refer to base/utils for flyout */
.nav--b--sub .flyout {
  @include transition(opacity, 0.2s, ease); /* Refer to base/mixins */
  top: -0.625em;
  font-size: 0.8125rem;
  border-radius: 0.3125em;
  opacity: 0;
  visibility: hidden;
  padding: 1em;
  line-height: 2.5;
}

.nav--b-item:hover .flyout {
  opacity: 1;
  visibility: visible;
}

.nav--b .flyout--split {
  column-count: 3;
}

.nav--b-item {
  /**
   * Establish container for arrowDown
   */
  position: relative;
  display: inline-block;
  padding-left: 0.8125em;
  padding-right: 0.8125em;
}

.nav--b-item.caret--bottom::after {
  bottom: 0.55em;
  border-width: 0.3125em;
}

.nav--b-item a {
  display: block;
  letter-spacing: 0.0625em;
  text-decoration: none;
  text-transform: capitalize;
  color: inherit;
}

.nav--b-item .icon {
  vertical-align: middle;
}

.nav--b-item .logo {
  font-size: 1.125rem;
  display: inline-block;
  vertical-align: middle;
}

/*
 * Mobile Navigation
 */

.nav--b--sm {
  @include breakpoint(min, 78.125em) {
    display: none;
  }
}

.nav--b--sm .logo {
  display: inline-block;
  vertical-align: middle;
}

.nav--b--sm .icon--exit {
  position: relative;
}

/* Target areas for `icon--exit` */
.nav--b--sm .icon--exit::before {
  right: 0;
}

.nav--b--sm .icon--exit::after {
  left: 0;
}

.nav--b--sm .icon--exit span {
  font-size: 1rem;
  top: 0.625em;
}

.nav--b--sm-list {
  display: flex;
  align-items: center;
}

.nav--b--sm-list a {
  display: block;
  text-decoration: none;
}

.nav--b--sm-list .icon {
  vertical-align: middle;
}

.nav--b--sm-item {
  /* Contain `.icon--menu` target areas; see `../icon/index.scss` */
  position: relative;
}

.nav--b--sm-item:last-of-type {
  flex-grow: 1;
  text-align: center;
}

.nav--b--sm-item:last-of-type a {
  width: 35%;
  margin-left: auto;
  margin-right: auto;
}

/* Refer to base/utils for `.flyout` */
.nav--b--sm .flyout {
  @include transition(transform, 0.75s, ease);
  @include translate(-18.75em, null); /* Refer to base/mixins */

  position: fixed;
  top: 0;
  left: 0;
  z-index: get-zindex(apex); /* Refer to base/variables for z-index scale */

  height: 100vh;
  min-width: 16em;
  overflow-y: scroll;
  overflow-x: hidden; /* Prevent horizontal scroll due to aligned `.flyout-item` */
  -webkit-overflow-scrolling: touch;
}

.nav--b--sm .flyout.is-visible {
  @include translate(0, null);
  // visibility:visible;
}

.nav--b--sm .flyout-item {
  /**
   * Declare relative on list item to contain arrowRight
   */
  position: relative;
  display: block;
  letter-spacing: 0.0625em;
  text-transform: capitalize;
}

.nav--b--sm .flyout-item:not(:last-child) {
  border-bottom: 0.0625em solid rgba(255, 255, 255, 0.2);
}

.nav--b--sm .flyout-link {
  position: relative;
  font-size: 1.125rem;
  display: block;
  padding-top: ((16 / 18) * 1em);
  padding-bottom: ((16 / 18) * 1em);
  text-decoration: none;
}

.nav--b--sm .flyout-item:not(:first-of-type) a {
  left: 30px;
}

.nav--b--sm .flyout--nested {
  @include transition(max-height, 0.3s);
  /**
   * Prevent nested flyout from overlapping list item
   */
  position: relative;
  // top: 1.125em;

  max-height: 0vh;
  // visibility: hidden;
  overflow: hidden;
  background-color: color(var(--skin-default) b(+95%));
}

.flyout-item.is-active .flyout--nested {
  max-height: 1000vh;
  // visibility:visible;
}

.nav--b--sm .caret--right::after {
  top: 1.55em;
  right: 1.25em;
  border-width: 0.375em;
}

.nav--b--sm .caret--right.is-active::after {
  @include rotate(0.5turn);
}

